# customers_service

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
alembic/: env.py
alembic/versions/: b6756cdb797b_init.py
customers_service/: config.py  database.py  main.py
customers_service/api/: deps.py
